<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_list2"
    tools:context=".Shapes.Shape_Level9">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnHelp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:onClick="help"
            android:src="@drawable/help"
            />

        <ImageView
            android:id="@+id/levelshape"
            android:layout_width="30dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:clickable="true"
            android:onClick="levelShape"
            android:src="@drawable/level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="150dp"
            android:text="9/9"
            android:textSize="20sp"/>

    </LinearLayout>



    <ImageView
        android:layout_marginTop="60dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/hexagon"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Who am I?"
        android:textColor="#000000"
        android:textSize="60dp"/>

    <RadioGroup
        android:id="@+id/radioShapes1"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioOctogone"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/octogone"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radioHexagon"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/hexagon"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"

            />

        <RadioButton
            android:id="@+id/radioParallelograme"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/parallelograme"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#E4DFE3"
        android:text="@string/Choose"
        android:textColor="#000000"
        android:textSize="20dp" />
</LinearLayout>